fix: new update package

--- a/template/.env.example
+++ b/template/.env.example
@@ -9,4 +9,30 @@ JWT_REFRESH_EXPIRES_IN=
 KAFKA_CLIENT_ID=nestjs-archi-cli
 KAFKA_BROKERS=kafka:9092
 KAFKA_CONSUMER_GROUP_ID=
+HTTP_RETRIES=
+HTTP_RETRY_DELAY_MS=
+ONESIGNAL_APP_ID=
+ONESIGNAL_API_KEY=
+ONESIGNAL_CHANNEL_ID=
+ONESIGNAL_REST_API_URL=
+
+#sender mail template
+NEWSLETTER_HOST=
+NEWSLETTER_USER=
+NEWSLETTER_PASS=
+NEWSLETTER_SENDER=
+
+EMAIL_HOST=
+EMAIL_PORT=
+EMAIL_USER=
+EMAIL_PASS=
+EMAIL_SENDER=
+
+CONTACT_HOST=
+CONTACT_PORT=
+CONTACT_USER=
+CONTACT_PASS=
+CONTACT_SENDER=
+
+
 
