--- a/template/package.json
+++ b/template/package.json
@@ -20,6 +20,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@nestjs-modules/mailer": "^2.0.2",
     "@nestjs/axios": "^4.0.1",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
@@ -36,11 +37,13 @@
     "class-validator": "^0.14.2",
     "crypto-js": "^4.2.0",
     "dotenv": "^17.2.1",
+    "handlebars": "^4.7.8",
     "jsonwebtoken": "^9.0.2",
     "kafkajs": "^2.2.4",
     "libphonenumber-js": "^1.12.10",
     "nestjs-logging-interceptor": "^0.1.2",
     "nestjs-prisma": "^0.25.0",
+    "nodemailer": "^8.0.1",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.2",
