--- a/template/package.json
+++ b/template/package.json
@@ -30,6 +30,7 @@
     "@nestjs/microservices": "^11.1.5",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/swagger": "^11.2.6",
     "@prisma/client": "^6.12.0",
     "axios": "^1.11.0",
     "bcryptjs": "^3.0.2",
